// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs renderTabBar custom-tab-bar 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-tabs dcloud-tabs-top"
  >
    <div>
      custom-tab-bar
    </div>
    <div
      class="dcloud-tabs-content-holder"
    >
      <div
        class="dcloud-tabs-content dcloud-tabs-content-top"
      >
        <div
          aria-hidden="false"
          class="dcloud-tabs-tabpane dcloud-tabs-tabpane-active"
          role="tabpanel"
          tabindex="0"
        >
          foo
        </div>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Tabs rtl render component should be rendered correctly in RTL direction 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-tabs dcloud-tabs-top dcloud-tabs-rtl"
  >
    <div
      class="dcloud-tabs-nav"
      role="tablist"
    >
      <div
        class="dcloud-tabs-nav-wrap"
      >
        <div
          class="dcloud-tabs-nav-list"
          style="transform: translate(0px, 0px);"
        >
          <div
            class="dcloud-tabs-tab dcloud-tabs-tab-active"
          >
            <div
              aria-controls="rc-tabs-test-panel-xx"
              aria-selected="true"
              class="dcloud-tabs-tab-btn"
              id="rc-tabs-test-tab-xx"
              role="tab"
              tabindex="0"
            >
              xx
            </div>
          </div>
          <div
            class="dcloud-tabs-ink-bar dcloud-tabs-ink-bar-animated"
          />
        </div>
      </div>
      <div
        class="dcloud-tabs-nav-operations dcloud-tabs-nav-operations-hidden"
      >
        <button
          aria-controls="rc-tabs-test-more-popup"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-hidden="true"
          class="dcloud-tabs-nav-more"
          id="rc-tabs-test-more"
          style="visibility: hidden; order: 1;"
          tabindex="-1"
          type="button"
        >
          <span
            aria-label="ellipsis"
            class="anticon anticon-ellipsis"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="ellipsis"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="dcloud-tabs-content-holder"
    >
      <div
        class="dcloud-tabs-content dcloud-tabs-content-top"
      >
        <div
          aria-hidden="false"
          aria-labelledby="rc-tabs-test-tab-xx"
          class="dcloud-tabs-tabpane dcloud-tabs-tabpane-active"
          id="rc-tabs-test-panel-xx"
          role="tabpanel"
          tabindex="0"
        />
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Tabs tabBarGutter should work 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-tabs dcloud-tabs-top"
  >
    <div
      class="dcloud-tabs-nav"
      role="tablist"
    >
      <div
        class="dcloud-tabs-nav-wrap"
      >
        <div
          class="dcloud-tabs-nav-list"
          style="transform: translate(0px, 0px);"
        >
          <div
            class="dcloud-tabs-tab dcloud-tabs-tab-active"
          >
            <div
              aria-controls="rc-tabs-test-panel-null"
              aria-selected="true"
              class="dcloud-tabs-tab-btn"
              id="rc-tabs-test-tab-null"
              role="tab"
              tabindex="0"
            />
          </div>
          <div
            class="dcloud-tabs-tab dcloud-tabs-tab-active"
            style="margin-left: 0px;"
          >
            <div
              aria-controls="rc-tabs-test-panel-null"
              aria-selected="true"
              class="dcloud-tabs-tab-btn"
              id="rc-tabs-test-tab-null"
              role="tab"
              tabindex="0"
            />
          </div>
          <div
            class="dcloud-tabs-tab dcloud-tabs-tab-active"
            style="margin-left: 0px;"
          >
            <div
              aria-controls="rc-tabs-test-panel-null"
              aria-selected="true"
              class="dcloud-tabs-tab-btn"
              id="rc-tabs-test-tab-null"
              role="tab"
              tabindex="0"
            />
          </div>
          <div
            class="dcloud-tabs-ink-bar dcloud-tabs-ink-bar-animated"
          />
        </div>
      </div>
      <div
        class="dcloud-tabs-nav-operations dcloud-tabs-nav-operations-hidden"
      >
        <button
          aria-controls="rc-tabs-test-more-popup"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-hidden="true"
          class="dcloud-tabs-nav-more"
          id="rc-tabs-test-more"
          style="margin-left: 0px; visibility: hidden; order: 1;"
          tabindex="-1"
          type="button"
        >
          <span
            aria-label="ellipsis"
            class="anticon anticon-ellipsis"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="ellipsis"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="dcloud-tabs-content-holder"
    >
      <div
        class="dcloud-tabs-content dcloud-tabs-content-top"
      >
        <div
          aria-hidden="false"
          aria-labelledby="rc-tabs-test-tab-null"
          class="dcloud-tabs-tabpane dcloud-tabs-tabpane-active"
          id="rc-tabs-test-panel-null"
          role="tabpanel"
          tabindex="0"
        />
        <div
          aria-hidden="false"
          aria-labelledby="rc-tabs-test-tab-null"
          class="dcloud-tabs-tabpane dcloud-tabs-tabpane-active"
          id="rc-tabs-test-panel-null"
          role="tabpanel"
          tabindex="0"
        />
        <div
          aria-hidden="false"
          aria-labelledby="rc-tabs-test-tab-null"
          class="dcloud-tabs-tabpane dcloud-tabs-tabpane-active"
          id="rc-tabs-test-panel-null"
          role="tabpanel"
          tabindex="0"
        />
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Tabs tabBarGutter should work 2`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-tabs dcloud-tabs-left"
  >
    <div
      class="dcloud-tabs-nav"
      role="tablist"
    >
      <div
        class="dcloud-tabs-nav-wrap"
      >
        <div
          class="dcloud-tabs-nav-list"
          style="transform: translate(0px, 0px);"
        >
          <div
            class="dcloud-tabs-tab dcloud-tabs-tab-active"
          >
            <div
              aria-controls="rc-tabs-test-panel-null"
              aria-selected="true"
              class="dcloud-tabs-tab-btn"
              id="rc-tabs-test-tab-null"
              role="tab"
              tabindex="0"
            />
          </div>
          <div
            class="dcloud-tabs-tab dcloud-tabs-tab-active"
            style="margin-top: 0px;"
          >
            <div
              aria-controls="rc-tabs-test-panel-null"
              aria-selected="true"
              class="dcloud-tabs-tab-btn"
              id="rc-tabs-test-tab-null"
              role="tab"
              tabindex="0"
            />
          </div>
          <div
            class="dcloud-tabs-tab dcloud-tabs-tab-active"
            style="margin-top: 0px;"
          >
            <div
              aria-controls="rc-tabs-test-panel-null"
              aria-selected="true"
              class="dcloud-tabs-tab-btn"
              id="rc-tabs-test-tab-null"
              role="tab"
              tabindex="0"
            />
          </div>
          <div
            class="dcloud-tabs-ink-bar dcloud-tabs-ink-bar-animated"
          />
        </div>
      </div>
      <div
        class="dcloud-tabs-nav-operations dcloud-tabs-nav-operations-hidden"
      >
        <button
          aria-controls="rc-tabs-test-more-popup"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-hidden="true"
          class="dcloud-tabs-nav-more"
          id="rc-tabs-test-more"
          style="margin-left: 0px; visibility: hidden; order: 1;"
          tabindex="-1"
          type="button"
        >
          <span
            aria-label="ellipsis"
            class="anticon anticon-ellipsis"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="ellipsis"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="dcloud-tabs-content-holder"
    >
      <div
        class="dcloud-tabs-content dcloud-tabs-content-left"
      >
        <div
          aria-hidden="false"
          aria-labelledby="rc-tabs-test-tab-null"
          class="dcloud-tabs-tabpane dcloud-tabs-tabpane-active"
          id="rc-tabs-test-panel-null"
          role="tabpanel"
          tabindex="0"
        />
        <div
          aria-hidden="false"
          aria-labelledby="rc-tabs-test-tab-null"
          class="dcloud-tabs-tabpane dcloud-tabs-tabpane-active"
          id="rc-tabs-test-panel-null"
          role="tabpanel"
          tabindex="0"
        />
        <div
          aria-hidden="false"
          aria-labelledby="rc-tabs-test-tab-null"
          class="dcloud-tabs-tabpane dcloud-tabs-tabpane-active"
          id="rc-tabs-test-panel-null"
          role="tabpanel"
          tabindex="0"
        />
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Tabs tabPosition remove card 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-tabs dcloud-tabs-left"
  >
    <div
      class="dcloud-tabs-nav"
      role="tablist"
    >
      <div
        class="dcloud-tabs-nav-wrap"
      >
        <div
          class="dcloud-tabs-nav-list"
          style="transform:translate(0px, 0px)"
        >
          <div
            class="dcloud-tabs-tab dcloud-tabs-tab-active"
          >
            <div
              aria-selected="true"
              class="dcloud-tabs-tab-btn"
              role="tab"
              tabindex="0"
            >
              foo
            </div>
          </div>
          <div
            class="dcloud-tabs-ink-bar dcloud-tabs-ink-bar-animated"
          />
        </div>
      </div>
      <div
        class="dcloud-tabs-nav-operations dcloud-tabs-nav-operations-hidden"
      >
        <button
          aria-controls="null-more-popup"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-hidden="true"
          class="dcloud-tabs-nav-more"
          id="null-more"
          style="visibility:hidden;order:1"
          tabindex="-1"
          type="button"
        >
          <span
            aria-label="ellipsis"
            class="anticon anticon-ellipsis"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="ellipsis"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="dcloud-tabs-extra-content"
      >
        xxx
      </div>
    </div>
    <div
      class="dcloud-tabs-content-holder"
    >
      <div
        class="dcloud-tabs-content dcloud-tabs-content-left"
      >
        <div
          aria-hidden="false"
          class="dcloud-tabs-tabpane dcloud-tabs-tabpane-active"
          role="tabpanel"
          tabindex="0"
        >
          foo
        </div>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;
